# http-tiny

./: .gitignore  AGENTS.md  AGENTS.txt  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  flags.rs  main.rs  mime.rs  parse_request.rs  response.rs  status.rs  tcp_listen.rs  validate_flags.rs  validate_request.rs
