[package]
name = "http-tiny"
authors = ["CorroZn <corrozn@proton.me>"]
version = "0.1.2"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/CorroZn/http-tiny"
description = "A tiny HTTP server intented for use in constrained systems."

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false